<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/parse_login"
    android:visibility="gone">

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/com_parse_ui_username_input_hint" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/com_parse_ui_password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:id="@+id/parse_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/parse_login_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/com_parse_ui_parse_login_button_label" />

        <Button
            android:id="@+id/parse_signup_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/com_parse_ui_parse_signup_button_label" />
    </LinearLayout>

    <Button
        android:id="@+id/parse_login_help"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/com_parse_ui_forgot_password_button_label" />
</LinearLayout>
